RESOLVED FIXED70087
[Chromium] Uninitialized read in WebCore::*Font* / HB_GSUB_Select_Feature
https://bugs.webkit.org/show_bug.cgi?id=70087
Summary [Chromium] Uninitialized read in WebCore::*Font* / HB_GSUB_Select_Feature
Kenichi Ishibashi
Reported 2011-10-13 21:06:55 PDT
See http://crbug.com/100154 for details.
Attachments
Patch (2.09 KB, patch)
2011-10-13 21:36 PDT, Kenichi Ishibashi
no flags
Kenichi Ishibashi
Comment 1 2011-10-13 21:36:13 PDT
Kent Tamura
Comment 2 2011-10-13 22:48:41 PDT
Comment on attachment 110953 [details] Patch ok
WebKit Review Bot
Comment 3 2011-10-13 23:56:18 PDT
Comment on attachment 110953 [details] Patch Clearing flags on attachment: 110953 Committed r97445: <http://trac.webkit.org/changeset/97445>
WebKit Review Bot
Comment 4 2011-10-13 23:56:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.