[Chromium] Uninitialized read in WebCore::*Font* / HB_GSUB_Select_Feature https://bugs.webkit.org/show_bug.cgi?id=70087

Reviewed by Kent Tamura.

Initialize local variables in ComplexTextControllerLinux::setupfontFeatures.

No new tests because there is no behavior change. Manually tested with valgrind.

* platform/graphics/chromium/ComplexTextControllerLinux.cpp:
(WebCore::setupFontFeatures):


Canonical link: https://commits.webkit.org/86174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97445 268f45cc-cd09-0410-ab3c-d52691b4dbfc